# ucloud-sandbox-sdk-python

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  Makefile  README.md  package.json  pyproject.toml  pytest.ini
.github/workflows/: publish-pypi.yml
e2b_connect/: client.py
scripts/: hack.py  sync_dependencies.py  sync_upstreams.sh
tests/: conftest.py  test_connection_config.py  test_connection_config_region.py  test_sandbox.py
tests/async/sandbox_async/: test_internet_access.py
tests/async/template_async/: test_background_build.py  test_stacktrace.py
tests/sync/sandbox_sync/: test_internet_access.py
tests/sync/template_sync/: test_background_build.py  test_stacktrace.py
ucloud_sandbox/: __init__.py  _env.py  connection_config.py  domain_config.py  exceptions.py  sandbox_domains.py
ucloud_sandbox/api/: __init__.py  metadata.py
ucloud_sandbox/api/client/: __init__.py
ucloud_sandbox/api/client_async/: __init__.py
ucloud_sandbox/api/client_sync/: __init__.py
ucloud_sandbox/code_interpreter/: __init__.py  charts.py  code_interpreter_async.py  code_interpreter_sync.py  constants.py  exceptions.py  models.py
ucloud_sandbox/desktop/: __init__.py  main.py
ucloud_sandbox/envd/: api.py  rpc.py
ucloud_sandbox/envd/filesystem/: filesystem_connect.py
ucloud_sandbox/envd/process/: process_connect.py
ucloud_sandbox/sandbox/: main.py  mcp.py  network.py  sandbox_api.py
ucloud_sandbox/sandbox/_git/: __init__.py  args.py  auth.py  config.py  parse.py
ucloud_sandbox/sandbox/commands/: command_handle.py
ucloud_sandbox/sandbox/filesystem/: filesystem.py  watch_handle.py
ucloud_sandbox/sandbox_async/: git.py  main.py  paginator.py  sandbox_api.py
ucloud_sandbox/sandbox_async/commands/: command.py  command_handle.py  pty.py
ucloud_sandbox/sandbox_async/filesystem/: filesystem.py  watch_handle.py
ucloud_sandbox/sandbox_sync/: git.py  main.py  paginator.py  sandbox_api.py
ucloud_sandbox/sandbox_sync/commands/: command.py  command_handle.py  pty.py
ucloud_sandbox/sandbox_sync/filesystem/: filesystem.py  watch_handle.py
ucloud_sandbox/template/: dockerfile_parser.py  logger.py  main.py  readycmd.py  types.py  utils.py
ucloud_sandbox/template_async/: build_api.py  main.py
ucloud_sandbox/template_sync/: build_api.py  main.py
ucloud_sandbox/volume/: connection_config.py  types.py  utils.py  volume_async.py  volume_sync.py
ucloud_sandbox/volume/client/: __init__.py
ucloud_sandbox/volume/client_async/: __init__.py
ucloud_sandbox/volume/client_sync/: __init__.py
