[tool.poetry]
name = "ucloud_sandbox"
version = "1.0.0"
description = "UCloud Sandbox SDK - Cloud sandbox environments for AI agents"
authors = ["UCloud <support@ucloud.cn>"]
license = "MIT"
readme = "README.md"
homepage = "https://ucloud.cn/"
repository = "https://github.com/ucloud/ucloud-sandbox-sdk"
packages = [{ include = "ucloud_sandbox" }]

[tool.poetry.dependencies]
python = "^3.10"
e2b = ">=2.29.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-xdist = "^3.3.1"
python-dotenv = "^1.0.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.11.12"
pytest-timeout = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ucloud/ucloud-sandbox-sdk/issues"
