[tool.poetry]
name = "ucloud_sandbox"
version = "1.0.0"
description = "UCloud Sandbox SDK - Cloud sandbox environments for AI agents"
authors = ["UCloud <support@ucloud.cn>"]
license = "MIT"
readme = "README.md"
homepage = "https://ucloud.cn/"
repository = "https://github.com/ucloud/ucloud-sandbox-sdk"
packages = [{ include = "ucloud_sandbox" }, { include = "e2b_connect" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = ">=2.8.2"
wcmatch = "^10.1"
protobuf = ">=4.21.0"
httpcore = "^1.0.5"
httpx = ">=0.27.0, <1.0.0"
h2 = ">=4,<5"
attrs = ">=23.2.0"
packaging = ">=24.1"
typing-extensions = ">=4.1.0"
dockerfile-parse = "^2.0.1"
rich = ">=14.0.0"
requests = "^2.32.3"
pillow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-xdist = "^3.6.1"
python-dotenv = "^1.0.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^1.3.0"
pydoc-markdown = "^4.8.2"
datamodel-code-generator = "^0.34.0"
ruff = "^0.15.0"
pytest-timeout = "^2.4.0"
ty = "^0.0.15"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ucloud/ucloud-sandbox-sdk/issues"

[tool.ruff]
exclude = [
    "ucloud_sandbox/envd/filesystem/filesystem_pb2.py"
]
